# mailnotify

./: .envrc  .gitignore  README.md  flake.nix  go.mod  go.sum  mailnotify.go  pyproject.toml  setup.cfg  setup.py  shell.nix
.vim/: coc-settings.json
mailnotify/: __main__.py  mailnotify.py
