[tool.poetry]
name = "mailnotify"
version = "0.0.1"
description = "A small program that notifies when mail has arrived in ~/Mail"
authors = ["Sumner Evans <inquiries@sumnerevans.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
mailnotify = "mailnotify.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
PyGObject = "^3.38.0"
watchdog = "^2.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
yapf = "^0.30.0"
jedi = "^0.17.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
